--- a/src/AspNetCore.Identity.Dapper/AspNetCore.Identity.Dapper.csproj
+++ b/src/AspNetCore.Identity.Dapper/AspNetCore.Identity.Dapper.csproj
@@ -14,6 +14,7 @@
     <PackageTags>aspnetcore;identity;membership</PackageTags>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
+    <Version>1.0.1</Version>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="1.50.4" />
